Fix line-wrap in code blocks.

--- a/src/styles/resets.scss
+++ b/src/styles/resets.scss
@@ -7,6 +7,6 @@
 
 :global {
   .hljs {
-    overflow-x: auto;
+    white-space: pre-wrap;
   }
 }
